fixed-middle_number-alignment and footer for mobile view

--- a/styles.css
+++ b/styles.css
@@ -957,6 +957,8 @@ h1, h3 {
   .header-count {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   .count-header {
@@ -1100,23 +1102,25 @@ h1, h3 {
     margin-left: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
   }
 
   .footer-logo {
     width: 16rem;
+    margin-left: 3rem;
   }
 
   .footer-para {
     font-size: 1.2rem;
     line-height: 2rem;
-    margin-left: 7rem;
+    margin-left: 3.7rem;
   }
 
   .phone, .mail {
     font-size: 1.2rem;
     margin-top: 1rem;
+    margin-left: 3.4rem;
   }
 
   .phone img, .mail img {
